--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="col-lg-7 col-md-6">
           <div class="img-box">
-            <img src="https://postfiles.pstatic.net/MjAyNDA4MDhfMTQ2/MDAxNzIzMDQzNzAxNTMz.ztObOz465TNW0z7mA4igaHeP0f_xh5DX9BxN_MGogPUg.PdMmBL8YFEfFPxHX0qATqpOCAG2diFA_DPs5V3w_sg8g.PNG/%EC%9A%B0%EB%A6%AC%EB%82%98%EB%9D%BC_%EC%97%B0%ED%8F%89%EA%B7%A0_%EA%B8%B0%EC%98%A8_%EB%8B%A4%ED%95%AD%ED%9A%8C%EA%B7%80_%EB%B6%84%EC%84%9D.png?type=w3840" alt="">
+            <img src="https://postfiles.pstatic.net/MjAyNDA4MDhfMTQ2/MDAxNzIzMDQzNzAxNTMz.ztObOz465TNW0z7mA4igaHeP0f_xh5DX9BxN_MGogPUg.PdMmBL8YFEfFPxHX0qATqpOCAG2diFA_DPs5V3w_sg8g.PNG/%EC%9A%B0%EB%A6%AC%EB%82%98%EB%9D%BC_%EC%97%B0%ED%8F%89%EA%B7%A0_%EA%B8%B0%EC%98%A8_%EB%8B%A4%ED%95%AD%ED%9A%8C%EA%B7%80_%EB%B6%84%EC%84%9D.png?type=w3840"/>
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="https://postfiles.pstatic.net/MjAyNDA4MDhfMjgx/MDAxNzIzMDQzNzAxNTMy.xGBC56vXcGV4xN5RibKeCdbRmdit96Z1ibdeaSPvxgcg.-z_QXqtaAvbrbyCEniBpYWWaB0prCeivWgCPPkjMe6Yg.PNG/%EC%97%AC%EB%A6%84_%ED%8F%89%EA%B7%A0%EA%B8%B0%EC%98%A8_%EB%8B%A4%ED%95%AD%ED%9A%8C%EA%B7%80_%EB%B6%84%EC%84%9D.png?type=w966" alt="">
+            <img src="https://postfiles.pstatic.net/MjAyNDA4MDhfMjgx/MDAxNzIzMDQzNzAxNTMy.xGBC56vXcGV4xN5RibKeCdbRmdit96Z1ibdeaSPvxgcg.-z_QXqtaAvbrbyCEniBpYWWaB0prCeivWgCPPkjMe6Yg.PNG/%EC%97%AC%EB%A6%84_%ED%8F%89%EA%B7%A0%EA%B8%B0%EC%98%A8_%EB%8B%A4%ED%95%AD%ED%9A%8C%EA%B7%80_%EB%B6%84%EC%84%9D.png?type=w966"/>
           </div>
         </div>
         <div class="col-md-6 ">
@@ -126,7 +126,7 @@
         </div>
         <div class="col-lg-7 col-md-6">
           <div class="img-box">
-            <img src="https://postfiles.pstatic.net/MjAyNDA4MDhfOTIg/MDAxNzIzMDQzNzAxNTEz.hpISekTo3LYNBEa5Ysh_Wl84mnJAkV5Dw4bWROUKr9kg.O7OBZMh5RqgPHg16AIH5kvjS-6FJ4GS4mDCMwI50IM4g.PNG/%EB%B4%84_%ED%8F%89%EA%B7%A0%EA%B8%B0%EC%98%A8_%EB%8B%A4%ED%95%AD%ED%9A%8C%EA%B7%80_%EB%B6%84%EC%84%9D.png?type=w3840" alt="">
+            <img src="https://postfiles.pstatic.net/MjAyNDA4MDhfOTIg/MDAxNzIzMDQzNzAxNTEz.hpISekTo3LYNBEa5Ysh_Wl84mnJAkV5Dw4bWROUKr9kg.O7OBZMh5RqgPHg16AIH5kvjS-6FJ4GS4mDCMwI50IM4g.PNG/%EB%B4%84_%ED%8F%89%EA%B7%A0%EA%B8%B0%EC%98%A8_%EB%8B%A4%ED%95%AD%ED%9A%8C%EA%B7%80_%EB%B6%84%EC%84%9D.png?type=w3840"/>
           </div>
         </div>
       </div>
